--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -62,7 +62,8 @@
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		margin: 0.5rem 1rem 0.25rem 0.5rem;
+		
 		text-transform: uppercase;
 		letter-spacing: _font(letter-spacing);
 
